tests/snapshots/snapshot__fixtures@m10__weight.sas.snap
---
source: tests/snapshot.rs
expression: "format!(\"==== LOG ====\\n{}\\n==== LISTING ====\\n{}\\n==== EXIT {} ====\",\noutcome.log, outcome.listing, outcome.exit_code)"
input_file: tests/fixtures/m10/weight.sas
---
==== LOG ====

1     data wtest;
2       x = 1; w = 1; output;
3       x = 2; w = 2; output;
4       x = 3; w = 3; output;
5     run;
NOTE: The data set WORK.WTEST has 3 observations and 2 variables.
NOTE: DATA statement used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

6     title 'Weighted statistics (weight w)';

7     proc means data=wtest n mean std sum;
8       weight w;
9       var x;
10    run;
NOTE: PROCEDURE MEANS used (Total process time):
            real time           0.00 seconds
            cpu time            0.00 seconds

==== LISTING ====
                                 Weighted statistics (weight w)

                                      The MEANS Procedure

                      Variable    N            Mean         Std Dev    Sum

                      x           3    2.3333333333    0.8164965809     14

==== EXIT 0 ====
